# autonomous_systems

./: .gitignore  README.md
lab1/: README.md  lab1_ros_intro_instructions.html  pioneer_behavior.py  pioneer_behavior_solved.py
lab1/hello_pub/: CMakeLists.txt  package.xml
lab1/hello_pub/src/: my_node.py
lab2/: README.md  tf_listener_tutorial.py
lab2-real-robot/: README.md  tf_listener_tutorial.py
lab2-simulation/: README.md  tf_listener_tutorial.py
resources/: auton_sys_setup.sh  magnetometer_Aria_example.py  urg_node_example.launch
resources/datasets/iter_lrf/: exp2.bag  matlab_motion_script.m
resources/datasets/iter_lrf/map/: map.pgm  map.yaml
resources/datasets/people_following/: people_follow_config.rviz
resources/datasets/updating_a_map/: map.pgm  map.yaml  record_h4.sh
resources/drivers/: GY85.py  magnetometer_Aria_example.py
resources/drivers/crazyflie/: README.md
resources/drivers/crazyflie/archive/: Crazyflie_Optitrack Setup.docx  Video001 Somagic Card.docx
resources/drivers/fisheye_camera/: CMakeLists.txt  package.xml
resources/drivers/fisheye_camera/launch/: rectify.launch
resources/drivers/fisheye_camera/src/: rectify.cpp  visualizer.cpp
resources/drivers/monarch_uwb/: CMakeLists.txt  package.xml  setup.py
resources/drivers/monarch_uwb/common/setup/: 85-uwb.rules  README.md  install_udev_rules.sh
resources/drivers/monarch_uwb/common/src/monarch_uwb/: README.md  uwb.py  uwb_v1.py  uwb_v2.py
resources/drivers/monarch_uwb/ros/config/: anchors_pos.yaml  tags_config.yaml
resources/drivers/monarch_uwb/ros/doc/: README.md  test_snippet.py
resources/drivers/monarch_uwb/ros/launch/: monarch_uwb.launch  uwb_driver.launch  uwb_mapping.launch  uwb_pose.launch
resources/drivers/monarch_uwb/ros/msg/: uwb.msg  uwb_anchor_array.msg  uwb_array.msg
resources/drivers/monarch_uwb/ros/scripts/: monarch_uwb_node  uwb_driver_node  uwb_driver_v1_node  uwb_driver_v2_node  uwb_visualization_node
resources/drivers/monarch_uwb/ros/src/monarch_uwb_ros/: CoupleTrilateration.py  Uwb.py  Wifi_Uwb.py  amcl_server.py  driver.py  filter.py  uwb_anchor_finder.py  uwb_driver_node.py  uwb_driver_v1.py  uwb_driver_v2.py  uwb_visualization.py  variance.py
resources/latex_slides_source/auton_sys_lab_1/: auton_systems_lab_1.tex
resources/latex_slides_source/auton_sys_lab_2/: auton_systems_lab_2.tex
resources/mbot_world_model/: CMakeLists.txt  package.xml
resources/mbot_world_model/maps/isr-8-floor/: map.pgm  map.yaml
resources/mbot_world_model/maps/isr-lab/: map.pgm  navigation_goals.yaml
resources/mbot_world_model/maps/isr-testbed/: map.pgm  map.yaml  navigation_goals.yaml  navigation_orientations.yaml
resources/mbot_world_model/maps/isr-testbed-sim/: map.pgm  map.yaml  navigation_goals.yaml  navigation_orientations.yaml
resources/mcr_common_msgs/: CMakeLists.txt  package.xml
resources/mcr_common_msgs/msg/: ClosedInterval.msg  Float32Stamped.msg  PoseStampedList.msg
resources/mcr_manipulation_msgs/: CMakeLists.txt  package.xml
resources/mcr_manipulation_msgs/msg/: ComponentWiseCartesianDifference.msg  GraspList.msg  GripperCommand.msg  JointDistance.msg  SphericalSamplerParameters.msg
resources/mcr_states/: CMakeLists.txt  package.xml  setup.py
resources/mcr_states/ros/src/mcr_states/common/: basic_states.py  perception_states.py
resources/ros_pkgs/: README.md
resources/ros_pkgs/stage_localization/: CMakeLists.txt  package.xml
resources/ros_pkgs/stage_localization/ros/launch/: stage2dslam.launch  stage_amcl.launch
resources/scripts/: alias.sh  create_ros_pkg.sh  display_git_branch_in_prompt.sh  enable_object_trainning.sh  git-completion.bash  load_environment_variables.sh  permanent.sh  roscat.sh  source_ros_workspace.sh  utils.sh
resources/scripts/fresh_installation_useful_scripts/: gitconfig.txt  install_recommended_pkgs.sh
resources/scripts/personal_config_examples/: personal_config_harode_server.sh  personal_config_oscar_laptop.sh
resources/scripts/snippets/: bash_examples.snp  enable_a_program.snp  linux_commands.snp  python.snp  ros_launch.snp
resources/scripts/udev_rules/: 80-ps3-joypad.rules  85-mbot.rules  85-pioneer.rules  README.md  install_udev_rules.sh
resources/scripts/udev_rules/idmind_udev_rules/: 10-omni.rules  11-hdcam.rules  12-joy.rules  13-rfid.rules  README.md  create_udev_rules
