<?xml version="1.0"?>
<package>
  <name>monarch_uwb</name>
  <version>1.0.0</version>
  <description>
    Ultra Wide Band sensor (UWB) drivers.
  </description>

  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
