<?xml version="1.0"?>
<package>
 <name>stage_localization</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email=""></author>
 <maintainer email=""></maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>TODO</build_depend>

 <run_depend>TODO</run_depend>

</package>
